# pyedifice

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  example.py  flake.nix  pyproject-overrides.nix  pyproject.toml  react.py  requirements.txt  run_coverage.sh  run_tests.sh  setup.py  test.py
.github/: codecov.yml
.github/workflows/: ci.yml  coverage.yml  python-package.yml
benchmarks/: color_change_app.py  efficient_color_change_app.py  memory_stress.py  memory_stress_tracemalloc.py  memray_leak_size.py
docs/: Makefile  README.md  basic_components.md  edifice.md  flake.nix  react.md  styles.md
docs/source/: api.rst  base_components.rst  compound_components.rst  conf.py  developer_tools.rst  edifice.rst  edifice.rst.txt  examples.rst  extra.rst  future.rst  hooks.rst  index.rst  index.rst.txt  run_subprocess_with_callback.rst  state.rst  state.rst.txt  styling.rst  tutorial.rst  tutorial.rst.txt  utilities.rst  versions.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: custom-class.rst
docs/source/image/: README.md  model-view-update-mermaid.txt
docs/source/sphinx_book_theme_override/: sbt-sidebar-nav-override.html
docs/source/stubs/: edifice.App.rst.txt  edifice.Button.rst.txt  edifice.CheckBox.rst.txt  edifice.Component.rst.txt  edifice.CustomWidget.rst  edifice.GridView.rst  edifice.Icon.rst.txt  edifice.IconButton.rst  edifice.Image.rst.txt  edifice.Label.rst.txt  edifice.PropsDict.rst  edifice.QtWidgetComponent.rst.txt  edifice.RadioButton.rst  edifice.Reference.rst.txt  edifice.ScrollView.rst  edifice.Slider.rst.txt  edifice.StateManager.rst.txt  edifice.StateValue.rst.txt  edifice.TabView.rst  edifice.TextInput.rst.txt  edifice.Timer.rst.txt  edifice.View.rst  edifice.Window.rst.txt  edifice.components.forms.Form.rst  edifice.components.plotting.Figure.rst.txt  edifice.make_component.rst.txt  edifice.register_props.rst
docs/source/stubs/stubs/: edifice.App.export_widgets.rst.txt  edifice.App.set_stylesheet.rst.txt  edifice.App.start.rst.txt  edifice.CheckBox.set_on_change.rst  edifice.Component.did_mount.rst  edifice.Component.did_render.rst.txt  edifice.Component.did_update.rst.txt  edifice.Component.register_props.rst  edifice.Component.register_ref.rst.txt  edifice.Component.render.rst  edifice.Component.render_changes.rst.txt  edifice.Component.set_key.rst  edifice.Component.set_state.rst.txt  edifice.Component.should_update.rst.txt  edifice.Component.will_unmount.rst  edifice.CustomWidget.create_widget.rst.txt  edifice.CustomWidget.paint.rst  edifice.RadioButton.set_on_change.rst  edifice.Slider.set_on_change.rst  edifice.StateManager.as_dict.rst  edifice.StateManager.copy.rst  edifice.StateManager.keys.rst.txt  edifice.StateManager.set.rst.txt  edifice.StateManager.subscribe.rst.txt  edifice.StateManager.update.rst  edifice.StateValue.set.rst.txt  edifice.StateValue.subscribe.rst.txt  edifice.TextInput.set_completer.rst.txt  edifice.TextInput.set_on_change.rst  edifice.TextInput.set_on_edit_finish.rst.txt  edifice.Timer.start.rst.txt  edifice.Timer.stop.rst.txt  edifice.Window.will_unmount.rst.txt  edifice.components.forms.Form.render.rst.txt  edifice.components.plotting.Figure.create_widget.rst.txt  edifice.components.plotting.Figure.did_mount.rst.txt  (+3 more)
edifice/: .__init__.py.swp  .foundation.py.swp  .test.py.swp  __init__.py  __main__.py  _component.py  app.py  base_components.py  component.py  core.py  engine.py  foundation.py  hooks.py  logger.py  runner.py  state.py  test.py  utilities.py
edifice/base_components/: __init__.py  base_components.py  button_view.py  check_box.py  flow_view.py  image_aspect.py  label_hfw.py  radio_button.py  scroll_bar.py  spin_input.py  table_grid_view.py  video.py
edifice/components/: button_view.py  flow_view.py  forms.py  image_aspect.py  matplotlib_figure.py  plotting.py  pyqtgraph_plot.py  table_grid_view.py
edifice/extra/: __init__.py  matplotlib_figure.py  numpy_image.py  pyqtgraph_plot.py
edifice/inspector/: inspector.py
edifice/qt/: __init__.py
examples/: 7guis_02_temperature_converter.py  7guis_03_flight_booker.py  7guis_04_timer.py  README.md  async.py  button_contemporary.py  calculator.py  calculator_hotreload.py  components1.py  components2.py  create_task.py  example.py  example_async_updates.py  example_base_components.py  example_child_place.py  example_children_prop.py  example_customwidget.py  example_drop.py  example_edifice.py  example_edifice_hooks.py  example_fullrowviewfixed.py  example_matplotlib_figure.py  example_pyqtgraph.py  example_qt.py  example_qt_export_widgets.py  example_resize.py  example_scrollbar.py  example_video.py  example_view_layout_none.py  fade_in.py  financial_charts.py  financial_charts_hotreload.py  flowview1.py  flowview2.py  form.py  fullrowviewfixed1.py  groupbox.py  harmonic_oscillator.py  image_stress.py  images.py  (+28 more)
examples/7guis/: 7guis_01_counter.py  7guis_02_temperature_converter.py  7guis_03_flight_booker.py  7guis_04_timer.py  7guis_05_crud.py  7guis_06_circle_drawer.py  7guis_07_cells.py  README.md
nix/pyedifice/: default.nix
nix/qasync/: default.nix
src/edifice/: __init__.py  __main__.py  app.py  engine.py  hooks.py  logger.py  run_subprocess_with_callback.py  runner.py  utilities.py
src/edifice/base_components/: __init__.py  base_components.py  button_view.py  check_box.py  flow_view.py  image_aspect.py  radio_button.py  scroll_bar.py  spin_input.py  table_grid_view.py
src/edifice/extra/: matplotlib_figure.py  numpy_image.py  pyqtgraph_plot.py
src/edifice/inspector/: inspector.py
test/: test_base_component.py  test_component.py  test_edifice.py  test_inspector.py
tests/: README.md  example_file.py  test_app.py  test_base_component.py  test_component.py  test_edifice.py  test_inspector.py  test_matplotlib_figure.py  test_numpy_image.py  test_pyqtgraph.py  test_run_subprocess_with_callback.py  test_runner.py  test_state.py  test_use_context.py  test_use_state.py
tests/components/: test_button_view.py  test_flow_view.py  test_forms.py  test_image_aspect.py  test_plotting.py  test_table_grid_view.py
