[tool.poetry]
name = "pyedifice"
version = "2.3.0"
description = "Declarative GUI framework for Python and Qt"
authors = ["David Ding", "James D. Brock", "Viktor Kronvall"]
license = "MIT"
readme = "README.md"
homepage = "https://pyedifice.github.io"
repository = "https://github.com/pyedifice/pyedifice"
packages = [{include = "edifice", from = "."}]
classifiers = [
  'Topic :: Software Development :: User Interfaces',
]

[tool.nix]
format = "poetry-core"

[tool.poetry.dependencies]
# we need typing and async features from python 3.10
python = ">=3.10, <3.13"
qasync = ">=0.26.0"
typing-extensions = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
PyQt6 = ">= 6.0"
PySide6-Essentials = ">= 6.0.0"

matplotlib = ">= 3.3.3" # for https://pyedifice.github.io/stubs/edifice.extra.MatplotlibFigure.html
pyqtgraph = ">= 0.13.0" # for https://pyedifice.github.io/stubs/edifice.extra.PyQtPlot.html

ruff = ">= 0.1.3" # for dev environment
ruff-lsp = ">= 0.0.42" # for dev environment
watchdog = ">= 1.0.2" # for hot-reload https://pyedifice.github.io/developer_tools.html#dynamic-hot-reload

pydata-sphinx-theme = "*" # sphinx packages for make docs
sphinx-autodoc-typehints = "*" # sphinx packages for make docs
sphinx-copybutton = "*" # sphinx packages for make docs

numpy = ">= 1.19.4" # for examples
pandas = ">= 1.2.0" # for examples/financial_charts.py
yfinance = "*" # for examples/financial_charts.py

memray = "*" # for memory profiling
objgraph = "*" # for memory profiling

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["ALL"]
extend-ignore = [
  # Rulesets
  "N",
  "D",
  "ANN",
  "FBT",
  "CPY",
  "PIE",
  "SIM",
  "SLF",
  "TD",
  "FIX",
]
ignore = [
  "ARG001", # unused function argument `self`
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0914",
  "PLR0915",
  "PLR0916",
  "PLR0917",
  "PLR1702",
  "PLR1711",
  "C901",
  "EM101",
  "S101",
  "PLR2004",
  "TRY003",
  "EM102",
  "RUF002",
]

[tool.ruff.lint.per-file-ignores]
# Don't require an `__all__ = ...` to explicitly re-export in __init__.py.
# This is commonly disabled, ADT already disabled this linewise, so it's now made project-wide.
"__init__.py" = [ "F401" ]
# Don't require packages in test directories
"**/tests/**" = [ "INP001" ]
"**/examples/**" = [ "INP001" ]

[tool.pyright]
include = ["edifice"]
exclude = ["**/__pycache__"]
