[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyedifice"
version = "4.4.0"
description = "Declarative GUI framework for Python and Qt"
authors = [
    {name = "David Ding"},
    {name = "James D. Brock"},
    {name = "Viktor Kronvall"},
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
  'Topic :: Software Development :: User Interfaces',
]
requires-python = ">=3.10"
dependencies = [
  "qasync>=0.26.0",
  "typing-extensions>=4.0.0",
]

# https://github.com/pypa/setuptools/issues/4759#issuecomment-2547778989
[tool.setuptools]
license-files = []

[project.urls]
Homepage = "https://pyedifice.github.io"
Repository = "https://github.com/pyedifice/pyedifice"

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-optional-dependencies
[project.optional-dependencies]
PySide6-Essentials = [
  "PySide6-Essentials >= 6.0.0",
]
PyQt6 = [
  "PyQt6 >= 6.0.0",
]

# https://packaging.python.org/en/latest/specifications/dependency-groups/
[dependency-groups]
dev = [
  # PySide6 or PySide6-Essentials or PyQt6
  "PyQt6 >= 6.0.0",
  # "PyQt6 == 6.8.0", # compatible with nixpkgs.qt6.full v6.8.1
  "PySide6-Essentials >= 6.0.0",
  # "PySide6-Essentials == 6.8.1", # compatible with nixpkgs.qt6.full v6.8.1

  # Needed for tests and examples
  "numpy >=1.19.4, <2", # for tests, examples
  "watchdog >= 1.0.2", # for hot-reload https://pyedifice.github.io/developer_tools.html#dynamic-hot-reload
  "matplotlib >= 3.3.3", # for https://pyedifice.github.io/stubs/edifice.extra.MatplotlibFigure.html
  "pyqtgraph >= 0.13.0", # for https://pyedifice.github.io/stubs/edifice.extra.PyQtPlot.html

  # Tools for dev environment
  "ruff >= 0.1.3", # for dev environment
  "ruff-lsp >= 0.0.42", # for dev environment
  "watchdog >= 1.0.2", # for hot-reload https://pyedifice.github.io/developer_tools.html#dynamic-hot-reload

  # Docs generation
  "pydata-sphinx-theme", # sphinx packages for make docs
  "sphinx-autodoc-typehints", # sphinx packages for make docs
  "sphinx-copybutton", # sphinx packages for make docs

  # Needed for examples
  "numpy >= 1.19.4, <2", # for examples
  "pandas >= 1.2.0", # for examples/financial_charts.py
  "yfinance", # for examples/financial_charts.py
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["ALL"]
extend-ignore = [
  # Rulesets
  "N",
  "D",
  "ANN",
  "FBT",
  "CPY",
  "PIE",
  "SIM",
  "SLF",
  "TD",
  "FIX",
]
ignore = [
  "ARG001", # unused function argument `self`
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0914",
  "PLR0915",
  "PLR0916",
  "PLR0917",
  "PLR1702",
  "PLR1711",
  "C901",
  "EM101",
  "S101",
  "PLR2004",
  "TRY003",
  "EM102",
  "RUF002",
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = [
  "INP001",
  "ERA001",
]
"tests/**" = [
  "INP001",
  "PT015",
]

[tool.pyright]
include = ["src/edifice"]
exclude = ["**/__pycache__"]
